--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.1.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "next": "12.3.1",
     "next-auth": "~4.10.2",
     "openai": "^3.0.0",
