--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "axios": "^1.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "12.3.1",
-    "next-auth": "~4.10.2",
-    "openai": "^3.0.0",
+    "next-auth": "^4.20.1",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.18.0"
