--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "next": "12.3.1",
+    "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "openai": "^3.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -33,7 +33,7 @@
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
